frontend/test/should_pass/deleteInAlternative.grg
rule r
{
	n:Node;

	alternative {
		L {
			modify {
				delete(n);
			}
		}
	}
	
	modify {
	}
}
