frontend/test/should_fail/exec_035b.grg
rule r {
  alternative {
    a {
	  modify {
 	    exec(r);
      }
	}
	b {
	  n:Node;
	  modify {
	  }
    }
  }  
  
  modify {
  }
}